# geo2tag

./: .gitignore  Makefile  README  beautify.sh  build.sh  build_debs.sh  clean_build.sh  config.pri  configure.ac  erase_tests.sh  g2t.ogv  geo2tag.pro  odbcinst.ini  run_tests.sh  wikigps-libs.spec  wikigps-service.spec
src/server/: configure.ac
src/server/src/: Makefile.am  main.cpp
src/unixODBC-2.2.11/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README.AIX  README.GTK  README.OSX  README.VMS  acinclude.m4  aclocal.m4  configure  configure.in  unixODBC-sr.spec  unixODBC.spec  vmsbuild.com
src/unixODBC-2.2.11/DRVConfig/: Makefile.am  Makefile.in
src/unixODBC-2.2.11/DataManager/: LinuxODBC.xpm  Makefile.am  Makefile.in  ODBC.xpm  README  classBrowse.cpp  classBrowse.h  classBrowseFrame.cpp  classBrowseFrame.h  classCanvas.cpp  classCanvas.h  classColumn.cpp  classColumn.h  classConnectionFrame.cpp  classConnectionFrame.h  classDataManager.cpp  classDataManager.h  classDataSource.cpp  classDataSource.h  classDataSources.cpp  classDataSources.h  classDriver.cpp  classDriver.h  classDrivers.cpp  classDrivers.h  classISQL.cpp  classISQL.h  classIndex.cpp  classIndex.h  classIndexs.cpp  classIndexs.h  classLogin.cpp  classLogin.h  classNode.cpp  classNode.h  classODBC.cpp  classODBC.h  classPrimaryKeys.cpp  classPrimaryKeys.h  classSpecialColumns.cpp  (+15 more)
src/unixODBC-2.2.11/DataManagerII/: Makefile.am  Makefile.in  README  classBrowse.cpp  classBrowse.h  classBrowseFrame.cpp  classBrowseFrame.h  classCanvas.cpp  classCanvas.h  classColumn.cpp  classColumn.h  classConnectionFrame.cpp  classConnectionFrame.h  classDataManager.cpp  classDataManager.h  classDataSource.cpp  classDataSource.h  classDataSources.cpp  classDataSources.h  classDriver.cpp  classDriver.h  classDrivers.cpp  classDrivers.h  classISQL.cpp  classISQL.h  classIndex.h  classIndexs.cpp  classIndexs.h  classLogin.cpp  classLogin.h  classNode.cpp  classNode.h  classODBC.cpp  classODBC.h  classPrimaryKeys.cpp  classPrimaryKeys.h  classSpecialColumns.cpp  classSpecialColumns.h  classTable.cpp  classTable.h  (+15 more)
src/unixODBC-2.2.11/DriverManager/: DriverManager.exp  Makefile.am  Makefile.in  SQLAllocConnect.c  SQLAllocEnv.c  SQLAllocHandle.c  SQLAllocHandleStd.c  SQLAllocStmt.c  SQLBindCol.c  SQLBindParam.c  SQLBindParameter.c  SQLBrowseConnect.c  SQLBrowseConnectW.c  SQLBulkOperations.c  SQLCancel.c  SQLCloseCursor.c  SQLColAttribute.c  SQLColAttributeW.c  SQLColAttributes.c  SQLColAttributesW.c  SQLColumnPrivileges.c  SQLColumnPrivilegesW.c  SQLColumns.c  SQLColumnsW.c  SQLConnect.c  SQLConnectW.c  SQLCopyDesc.c  SQLDataSources.c  SQLDataSourcesW.c  SQLDescribeCol.c  SQLDescribeColW.c  SQLDescribeParam.c  SQLDisconnect.c  SQLDriverConnect.c  SQLDriverConnectW.c  SQLDrivers.c  SQLDriversW.c  SQLEndTran.c  SQLError.c  SQLErrorW.c  (+84 more)
src/unixODBC-2.2.11/Drivers/: Makefile.am  Makefile.in
src/unixODBC-2.2.11/Interix/: configure
src/unixODBC-2.2.11/ODBCConfig/: INSTALL  Makefile.am  Makefile.in  README  main.cpp
src/unixODBC-2.2.11/autotest/: Makefile.am  Makefile.in  gtrtst.c  gtrtst.exp
src/unixODBC-2.2.11/cur/: Makefile.am  Makefile.in  SQLAllocHandle.c  SQLAllocHandleStd.c  SQLAllocStmt.c  SQLBindCol.c  SQLBindParam.c  SQLBindParameter.c  SQLCancel.c  SQLCloseCursor.c  SQLColAttribute.c  SQLColAttributes.c  SQLColumnPrivileges.c  SQLColumns.c  SQLConnect.c  SQLCopyDesc.c  SQLDescribeCol.c  SQLDescribeParam.c  SQLEndTran.c  SQLError.c  SQLExecDirect.c  SQLExecute.c  SQLExtendedFetch.c  SQLFetch.c  SQLFetchScroll.c  SQLForeignKeys.c  SQLFreeHandle.c  SQLFreeStmt.c  SQLGetConnectAttr.c  SQLGetConnectOption.c  SQLGetCursorName.c  SQLGetData.c  SQLGetDescField.c  SQLGetDescRec.c  SQLGetDiagField.c  SQLGetDiagRec.c  SQLGetInfo.c  SQLGetStmtAttr.c  SQLGetStmtOption.c  SQLGetTypeInfo.c  (+28 more)
src/unixODBC-2.2.11/debian/: ODBCConfig.1  changelog  clean  control  docs  libodbcinstq1c2.install  libodbcinstq1c2.postinst  libodbcinstq1c2.symbols  odbcinst1debian1.install  odbcinst1debian1.lintian-overrides  odbcinst1debian1.symbols  rules  unixodbc-bin.install  unixodbc-bin.manpages  unixodbc-bin.menu  unixodbc-dev.install  unixodbc.install  unixodbc.lintian-overrides  unixodbc.symbols
src/unixODBC-2.2.11/doc/: Makefile.in  index.html
src/unixODBC-2.2.11/exe/: Makefile.am  Makefile.in  README  dltest.c  isql.c  isql.h  iusql.c  odbc-config.c  odbcinst.c
src/unixODBC-2.2.11/extras/: Makefile.am  Makefile.in  strcasecmp.c  vms.c
src/unixODBC-2.2.11/gODBCConfig/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  aclocal.m4  config.h.in  config.rpath  configure  configure.in  mkinstalldirs
src/unixODBC-2.2.11/include/: FDB.h  Makefile.am  Makefile.in  ini.h  log.h  odbcinstext.h  sqlext.h  sqltypes.h
src/unixODBC-2.2.11/ini/: Makefile.am  Makefile.in  _iniDump.c  _iniObjectRead.c  _iniPropertyRead.c  _iniScanUntilObject.c  iniAllTrim.c  iniAppend.c  iniClose.c  iniCommit.c  iniCursor.c  iniDelete.c  iniElement.c  iniElementCount.c  iniGetBookmark.c  iniGotoBookmark.c  iniObject.c  iniObjectDelete.c  iniObjectEOL.c  iniObjectFirst.c  iniObjectInsert.c  iniObjectLast.c  iniObjectNext.c  iniObjectSeek.c  iniObjectSeekSure.c  iniObjectUpdate.c  iniOpen.c  iniProperty.c  iniPropertyDelete.c  iniPropertyEOL.c  iniPropertyFirst.c  iniPropertyInsert.c  iniPropertyLast.c  iniPropertyNext.c  iniPropertySeek.c  iniPropertySeekSure.c  iniPropertyUpdate.c  iniPropertyValue.c  iniToUpper.c  iniValue.c
src/unixODBC-2.2.11/libltdl/: Makefile.am  Makefile.in  aclocal.m4  config-h.in  configure  configure.in  ltdl.c
src/unixODBC-2.2.11/log/: Makefile.am  Makefile.in  _logFreeMsg.c  logClose.c  logOn.c  logOpen.c  logPopMsg.c  logPushMsg.c  logPushMsgv.c
src/unixODBC-2.2.11/lst/: Makefile.am  Makefile.in  _lstAdjustCurrent.c  _lstDump.c  _lstFreeItem.c  _lstNextValidItem.c  _lstPrevValidItem.c  _lstVisible.c  lstAppend.c  lstClose.c  lstDelete.c  lstEOL.c  lstFirst.c  lstGet.c  lstGetBookMark.c  lstGoto.c  lstGotoBookMark.c  lstInsert.c  lstLast.c  lstNext.c  lstOpen.c  lstOpenCursor.c  lstPrev.c  lstSeek.c  lstSeekItem.c  lstSet.c  (+1 more)
(+4192 files in other folders)
