SUBDIRS = \
    extras \
    log \
	lst \
	ini \
    	libltdl \
	odbcinst \
	DriverManager \
	odbcinstQ \
	sqp \
	exe \
	cur \
	DRVConfig \
	Drivers \
	include \
	doc \
	ODBCConfig \
	DataManager \
	DataManagerII \
	odbctest \
	autotest

EXTRA_DIST = \
	README.GTK \
	gODBCConfig/Makefile.in \
	gODBCConfig/README \
	gODBCConfig/stamp-h.in \
	gODBCConfig/ABOUT-NLS \
	gODBCConfig/AUTHORS \
	gODBCConfig/COPYING \
	gODBCConfig/ChangeLog \
	gODBCConfig/INSTALL \
	gODBCConfig/Makefile.am \
	gODBCConfig/NEWS \
	gODBCConfig/config.guess \
	gODBCConfig/config.sub \
	gODBCConfig/gettext.h \
	gODBCConfig/aclocal.m4 \
	gODBCConfig/autogen.sh \
	gODBCConfig/config.h.in \
	gODBCConfig/configure \
	gODBCConfig/configure.in \
	gODBCConfig/install-sh \
	gODBCConfig/missing \
	gODBCConfig/mkinstalldirs \
	gODBCConfig/macros/Makefile.in \
	gODBCConfig/macros/Makefile.am \
	gODBCConfig/macros/aclocal-include.m4 \
	gODBCConfig/macros/compiler-flags.m4 \
	gODBCConfig/macros/curses.m4 \
	gODBCConfig/macros/gnome-bonobo-check.m4 \
	gODBCConfig/macros/gnome-fileutils.m4 \
	gODBCConfig/macros/gnome-ghttp-check.m4 \
	gODBCConfig/macros/gnome-gnorba-check.m4 \
	gODBCConfig/macros/gnome-guile-checks.m4 \
	gODBCConfig/macros/gnome-libgtop-check.m4 \
	gODBCConfig/macros/gnome-objc-checks.m4 \
	gODBCConfig/macros/gnome-orbit-check.m4 \
	gODBCConfig/macros/gnome-print-check.m4 \
	gODBCConfig/macros/gnome-pthread-check.m4 \
	gODBCConfig/macros/gnome-support.m4 \
	gODBCConfig/macros/gnome-undelfs.m4 \
	gODBCConfig/macros/gnome-vfs.m4 \
	gODBCConfig/macros/gnome-x-checks.m4 \
	gODBCConfig/macros/gnome-xml-check.m4 \
	gODBCConfig/macros/gnome.m4 \
	gODBCConfig/macros/gperf-check.m4 \
	gODBCConfig/macros/linger.m4 \
	gODBCConfig/macros/need-declaration.m4 \
	gODBCConfig/macros/gnome-common.m4 \
	gODBCConfig/macros/autogen.sh \
	gODBCConfig/src/Makefile.in \
	gODBCConfig/src/Makefile.am \
	gODBCConfig/src/main.c \
	gODBCConfig/src/support.c \
	gODBCConfig/src/support.h \
	gODBCConfig/src/odbcconfig.c \
	gODBCConfig/src/odbcconfig.h \
	gODBCConfig/src/interface.h \
	gODBCConfig/src/callbacks.c \
	gODBCConfig/src/callbacks.h \
	gODBCConfig/pixmaps/computer.xpm \
	gODBCConfig/pixmaps/driver.xpm \
	gODBCConfig/pixmaps/info.xpm \
	gODBCConfig/pixmaps/person.xpm \
	gODBCConfig/pixmaps/server.xpm \
	gODBCConfig/pixmaps/trace.xpm \
	gODBCConfig/po/boldquot.sed \
	gODBCConfig/po/ChangeLog \
	gODBCConfig/po/en@boldquot.header \
	gODBCConfig/po/en@quot.header \
	gODBCConfig/po/gODBCConfig.pot \
	gODBCConfig/po/gODBCConfig.sk.po \
	gODBCConfig/po/insert-header.sin \
	gODBCConfig/po/Makefile \
	gODBCConfig/po/Makefile.in \
	gODBCConfig/po/Makefile.in.in \
	gODBCConfig/po/Makevars \
	gODBCConfig/po/Makevars.template \
	gODBCConfig/po/POTFILES \
	gODBCConfig/po/POTFILES.in \
	gODBCConfig/po/quot.sed \
	gODBCConfig/po/remove-potcdate.sin \
	gODBCConfig/po/Rules-quot \
	gODBCConfig/m4/codeset.m4 \
	gODBCConfig/m4/gettext.m4 \
	gODBCConfig/m4/glibc21.m4 \
	gODBCConfig/m4/iconv.m4 \
	gODBCConfig/m4/intdiv0.m4 \
	gODBCConfig/m4/inttypes-pri.m4 \
	gODBCConfig/m4/inttypes.m4 \
	gODBCConfig/m4/inttypes_h.m4 \
	gODBCConfig/m4/isc-posix.m4 \
	gODBCConfig/m4/lcmessage.m4 \
	gODBCConfig/m4/lib-ld.m4 \
	gODBCConfig/m4/lib-link.m4 \
	gODBCConfig/m4/lib-prefix.m4 \
	gODBCConfig/m4/progtest.m4 \
	gODBCConfig/m4/stdint_h.m4 \
	gODBCConfig/m4/uintmax_t.m4 \
	unixODBC.spec \
	unixODBC-sr.spec \
	README.OSX \
	README.VMS \
	README.QNX \
	README.AIX \
	README.SOLARIS \
	README.INTERIX \
	vms/install_image.com \
	vms/odbc2_axp.opt \
	vms/odbc_axp.opt \
	vms/odbcinst_axp.opt \
	vms/odbc_setup.com \
	vms/drivermanager_axp.opt \
	vmsbuild.com \
	Drivers/MySQL/configure \
	Drivers/MySQL/Makefile.in \
	Drivers/MySQL/myconf.h.in \
	Drivers/MySQL/aclocal.m4 \
	Drivers/MySQL/COPYING \
	Drivers/MySQL/ChangeLog \
	Drivers/MySQL/ChangeSet \
	Drivers/MySQL/INSTALL \
	Drivers/MySQL/Makefile.am \
	Drivers/MySQL/README \
	Drivers/MySQL/RELEASE-NOTES \
	Drivers/MySQL/WIN-Makefile \
	Drivers/MySQL/WIN-Makefile_debug \
	Drivers/MySQL/acconfig.h \
	Drivers/MySQL/acinclude.m4 \
	Drivers/MySQL/catalog.c \
	Drivers/MySQL/config.guess \
	Drivers/MySQL/config.sub \
	Drivers/MySQL/configure.in \
	Drivers/MySQL/connect.c \
	Drivers/MySQL/cursor.c \
	Drivers/MySQL/dialogs.h \
	Drivers/MySQL/dll.c \
	Drivers/MySQL/error.c \
	Drivers/MySQL/error.h \
	Drivers/MySQL/execute.c \
	Drivers/MySQL/handle.c \
	Drivers/MySQL/info.c \
	Drivers/MySQL/install-sh \
	Drivers/MySQL/iodbc.ini \
	Drivers/MySQL/ltconfig \
	Drivers/MySQL/ltmain.sh \
	Drivers/MySQL/makerpm.sh \
	Drivers/MySQL/misc.c \
	Drivers/MySQL/missing \
	Drivers/MySQL/mkinstalldirs \
	Drivers/MySQL/my3dsn.hlp \
	Drivers/MySQL/myodbc3.c \
	Drivers/MySQL/myodbc3.def \
	Drivers/MySQL/myodbc3.dsp \
	Drivers/MySQL/myodbc3.dsw \
	Drivers/MySQL/myodbc3.h \
	Drivers/MySQL/myodbc3.rc \
	Drivers/MySQL/myodbc3.rsp \
	Drivers/MySQL/myodbc3.spec.sh \
	Drivers/MySQL/myutil.h \
	Drivers/MySQL/odbc.ini \
	Drivers/MySQL/options.c \
	Drivers/MySQL/prepare.c \
	Drivers/MySQL/resource.h \
	Drivers/MySQL/results.c \
	Drivers/MySQL/setup.c \
	Drivers/MySQL/stamp-h.in \
	Drivers/MySQL/transact.c \
	Drivers/MySQL/utility.c \
	Drivers/MySQL/samples/Makefile.in \
	Drivers/MySQL/samples/Makefile.am \
	Drivers/MySQL/samples/WIN-Makefile \
	Drivers/MySQL/samples/my_basics.c \
	Drivers/MySQL/samples/my_connect.c \
	Drivers/MySQL/samples/my_cursor.c \
	Drivers/MySQL/samples/my_param.c \
	Drivers/MySQL/samples/my_result.c \
	Drivers/MySQL/samples/my_tran.c \
	Drivers/MySQL/samples/my_utility.h \
	Interix/configure \
	Interix/config.guess \
	Interix/libtool

install-data-am:
	-touch $(DESTDIR)${sysconfdir}/odbcinst.ini
	-touch $(DESTDIR)${sysconfdir}/odbc.ini
	-mkdir -p $(DESTDIR)${sysconfdir}/ODBCDataSources
