EXTRA_DIST = \
	ini.h \
	log.h \
	lst.h \
	odbcinst.h \
	odbcinstext.h \
	sql.h \
	sqlext.h \
	sqltypes.h \
	sqlucode.h \
	sqp.h \
	uodbc_stats.h \
	autotest.h \
	DBFIO.h \
	DBTIO.h \
	FDBC.h \
	FDB.h \
	IFDB.h \
	NTXIO.h

include_HEADERS = \
	odbcinst.h \
	odbcinstext.h \
	sql.h \
	sqlext.h \
	sqltypes.h \
	sqlucode.h \
	uodbc_stats.h \
	autotest.h

